--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -13,6 +13,10 @@ index:
     path:     /
     defaults: { _controller: AppBundle:Default:index }
 
+registration:
+    path:     /registration/confirmed
+    defaults: { _controller: AppBundle:Registration:register }
+
 user_login:
     path:     /user/login
     defaults: { _controller: AppBundle:Security:login }
