--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -20,6 +20,7 @@ security:
                 login_path:     user_login
                 check_path:     user_login_check
                 default_target_path:    home
+                always_use_default_target_path: true
 
             logout:
                 path:        /user/logout
